# kobe

./: README.md  a.cpp
evaluation/: README.md  split_241121.csv
evaluation/_data/: List-20240322.xlsx  list-241121.csv
evaluation/hypoesthesia/: classifier.py
evaluation/metrics/: ssim.py
evaluation/prediction/: classifier.py  classifier2.py  main.py  main2.py  requirements.txt
evaluation/prediction/utils/: dataset2.py  loader.py  loader2.py
mCanal/: .gitignore  classifier.py  classifier_fusion.py  requirements.txt  untrained.py
mCanal/_data/: check_csv.py  csv_split.py  list-241120.csv  list-250514.csv  split_241120.csv  subject_split_fixed.csv
mCanal/utils/: dataset.py  loader.py
mronj/: .gitignore
mronj/_data/: 20250307.csv  ctxp_list.csv  ctxp_list0611.csv  ctxp_only.csv  list.csv  test.csv  train.csv  train_ctxp.csv  valid.csv
mronj/_data/crop_img/: test.csv  train.csv  valid.csv
mronj/_data/yolo/: data.yaml
mronj/_data/yolo/train/: labels.cache
mronj/_data/yolo/valid/: labels.cache
mronj/classification/: Hybrid_ViT.py  ctxp_metric.py  ctxp_vgg16.py  eNet.py  incep-v3.py  metric.py  vgg16.py
mronj/preprocessing/: crop_image.py
mronj/utils/: CLR.py  cam_ex.py  coatnet.py  contrastive.py  ctxp_loader.py  loader.py  loader_model.py  mobilevit.py  run.py  setup.py
synthesis/: .gitignore  CMakeLists.txt  README.md
synthesis/lib/include/hist/: core.hpp  peak.hpp
synthesis/lib/include/image/: core.hpp  io.hpp  mask.hpp  mip.hpp
synthesis/lib/include/utils/: dataset.hpp
synthesis/lib/src/hist/: core.cpp  peak.cpp
synthesis/lib/src/image/: core.cpp  io.cpp  mask.cpp  mip.cpp
synthesis/lib/src/utils/: dataset.cpp
synthesis/mcanal/: CMakeLists.txt
synthesis/mcanal/include/: synthesis.hpp
synthesis/mcanal/src/: debug.cpp  main.cpp  param.cpp
synthesis/mronj/: CMakeLists.txt
synthesis/mronj/include/: debug.hpp  param.hpp  synthesis.hpp
synthesis/mronj/src/: debug.cpp  main.cpp  param.cpp  synthesis.cpp
synthesis/multi/: CMakeLists.txt
synthesis/multi/include/: debug.hpp  synthesis.hpp
synthesis/multi/src/: main.cpp  synthesis.cpp
synthesis/parida/: CMakeLists.txt
synthesis/parida/include/: debug.hpp  param.hpp  synthesis.hpp
synthesis/parida/src/: debug.cpp  main.cpp  param.cpp  synthesis.cpp
synthesis/test/: CMakeLists.txt
synthesis/test/include/: param.hpp  synthesis.hpp
synthesis/test/src/: main.cpp  param.cpp  synthesis.cpp
unsupervied/: README.md
